<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/textDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Log In Page"
        android:textSize="60sp"
        android:textColor="@color/txtColor"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="40dp"
        android:layout_centerHorizontal="true"
        />

    <EditText
        android:id="@+id/et_name"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/textDisplay"
        android:layout_width="200dp"
        android:hint="Please enter your name"
        android:layout_height="wrap_content"
        />

    <EditText
        android:id="@+id/et_tel"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/et_name"
        android:layout_width="200dp"
        android:hint="Please enter your TEL"
        android:inputType="phone"
        android:layout_height="wrap_content"
        />

    <Button
        android:id="@+id/btnGo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/btnBackgroundColor"
        android:layout_below="@id/et_tel"
        android:layout_marginTop="60dp"
        android:text="GO "
        android:textSize="30dp"
        android:textColor="@color/txtColor"
        />

</RelativeLayout>