...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textDisplay"
        android:background="@color/btnBackgroundColor"
        android:text="Click Me To Booking"
        android:textColor="@color/txtColor"
        android:textSize="20dp" />

    <GridView
        android:id="@+id/gridView"
        android:layout_width="match_parent"
...
